<package format="2">
  <name>iclcv_catkin</name>
  <version>9.12.0</version>
  <description>iclcv_catkin</description>
  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>opencv3_catkin</depend>
</package>
